--- a/Pipfile
+++ b/Pipfile
@@ -4,6 +4,11 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
+flask = "==2.0.1"
+jinja2 = "==3.0.1"
+pypdf2 = "===1.26.0"
+reportlab = "===3.6.1"
+uwsgi = "*"
 
 [dev-packages]
 
