--- a/Pipfile
+++ b/Pipfile
@@ -4,11 +4,12 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-flask = "==2.0.1"
-jinja2 = "==3.0.1"
-pypdf2 = "===1.26.0"
 reportlab = "===3.6.1"
-uwsgi = "*"
+Flask = "==2.0.1"
+Jinja2 = "==3.0.1"
+PyPDF2 = "===1.26.0"
+uWSGI = "*"
+Flask-Cors = "==1.10.3"
 
 [dev-packages]
 
